@@ -3,14 +3,16 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>pl.chylu</groupId>
-    <artifactId>HotelMenager</artifactId>
+
+    <groupId>org.example</groupId>
+    <artifactId>HotelManager</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.release>17</maven.compiler.release>
+        <maven.compiler.release>14</maven.compiler.release>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.openjfx</groupId>
@@ -23,6 +25,7 @@
             <version>13</version>
         </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
@@ -31,9 +34,6 @@
                 <version>3.8.1</version>
                 <configuration>
                     <release>${maven.compiler.release}</release>
-                    <source>17</source>
-                    <target>17</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -41,9 +41,51 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.4</version>
                 <configuration>
-                    <mainClass>pl.chylu.App</mainClass>
+                    <mainClass>pl.clockworkjava.App</mainClass>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.0.0</version>
+                <executions>
+                    <execution>
+                        <id>Creating installer</id>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <phase>package</phase>
+                        <configuration>
+                            <executable>jpackage</executable>
+                            <arguments>
+                                <argument>--input</argument>
+                                <argument>target/</argument>
+
+                                <argument>--name</argument>
+                                <argument>HotelReservation</argument>
+
+                                <argument>--main-jar</argument>
+                                <argument>HotelReservation-1.0-SNAPSHOT.jar</argument>
+
+                                <argument>--main-class</argument>
+                                <argument>pl.clockworkjava.App</argument>
+
+                                <argument>--type</argument>
+                                <argument>msi</argument>
+
+                                <argument>--win-dir-chooser</argument>
+
+                                <argument>--module-path</argument>
+                                <argument>C:/Work/javafx-jmods-11.0.2</argument>
+
+                                <argument>--add-modules</argument>
+                                <argument>java.base,javafx.controls,javafx.web,javafx.graphics,javafx.media,java.desktop,javafx.fxml,jdk.charsets</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
+
 </project>
